<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OrderFoodApp</string>
    <!--    login, sign up string-->
    <string name="edt_email_hint">E-mail</string>
    <string name="edt_pw_hint">Password</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_register">Sign up</string>
    <string name="lbl_forget_pw">Forget password?</string>
    <string name="edt_full_name_hint">Full Name</string>
    <string name="edt_address_hint">Address</string>
    <string name="edt_phone_hint">Phone Number</string>
    <string name="edt_confirm_pw_hint">Confirm Password</string>
    <string name="lbl_tab_sign_in">Sign in</string>
    <string name="lbl_tab_sign_up">Sign up</string>
    <string name="already_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="chk_remember_login">Remember me</string>

    <!--    admin string-->
    <string name="lbl_profile">Profile</string>
    <string name="lbl_welcome">Welcome to</string>
    <string name="lbl_admin_name">Son!</string>

    <!--    food detail-->
    <string name="lbl_food_name">Thịt bò xào ngon hương vị hấp dẫn </string>
    <string name="lbl_price_unit"><u>đ</u></string>
    <string name="lbl_price">50.000</string>
    <string name="btn_add_to_cart">Add to cart</string>
    <string name="buy_now_btn">Buy now</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_description_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!--    cart layout-->
    <string name="lbl_cart">Cart</string>
    <string name="chk_all">All</string>
    <string name="lbl_total">Total</string>
    <string name="btn_buy">Buy</string>
    <string name="lbl_total_price">2000</string>
    <string name="lbl_quantity">1</string>
    <string name="lbl_delete">DELETE</string>
    <string name="lbl_edit">EDIT</string>
    <string name="lbl_ordered">Ordered</string>
    <!--Search-->
    <string name="edtSearch">Search...</string>

    //Bottom navigation bar item
    <string name="titleItemHome">Home</string>
    <string name="titleItemCart">Cart</string>
    <string name="titleItemUser">User</string>

    <!--    Menu item-->

    <string name="titleItemLogout">Logout</string>
    <string name="lbl_menu">Menus</string>
    <string name="lbl_category">Categories</string>

    <!--    upload category activity-->
    <string name="upload_btn">Select to upload image</string>
    <string name="cateygory_name_hint">Enter category\'s name</string>
    <string name="add_category_btn">Add category</string>
    <string name="lbl_add_category">New category</string>

    <!--  add food  -->
    <string name="food_name_hint">Enter food\'s name</string>
    <string name="food_desc_hint">Enter food\'s description</string>
    <string name="food_price_hint">Enter food\'s price</string>
    <string name="add_food_btn">Add food</string>
    <string name="lbl_add_food">New food</string>


    <string name="home_fragment">Home fragment</string>
    <string name="cart_fragment">Cart fragment</string>
    <string name="customer_fragment">Customer fragment</string>

    <!--    Profile information-->
    <string name="titleItemProfile">PROFILE</string>
    <string name="lblFullName">Full Name :</string>
    <string name="lblEmail">Email :</string>
    <string name="lblPhone">Phone :</string>
    <string name="lblAddress">Address :</string>
    <string name="btnEditProfile">Edit profile</string>

    <!--History-->
    <string name="titleItemHistory">HISTORY</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--   ordered fragment-->
    <string name="lbl_address_title">Address</string>
    <string name="lbl_name">Nguyễn Đoàn Huy Sơn</string>
    <string name="lbl_phone">0984182217</string>
    <string name="lbl_address">Cao đẳng công nghệ thủ đức, Phường Linh Chiểu, Quận Thủ Đức, TP.Hồ Chí Minh</string>
    <string name="lbl_quantity2">x1</string>
    <string name="lbl_status">Giao hàng thành công</string>
    <string name="lbl_bill">Bill</string>

    <!--    empty layout-->
    <string name="lbl_empty">Don\'t have any bill here. </string>
    >>>>>>> admin_manager_bills
</resources>